<resources>
    <string name="app_name">TodoManager06</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_create">Go to Create</string>
    <string name="add_new_task">Создать задачу</string>
    <string name="every_week">Каждую неделю</string>
    <string name="got_it">Понял</string>
    <string name="never">Никогда</string>
    <string name="every_day">Каждый день</string>
    <string name="every_month">Каждый месяц</string>
    <string name="every_year">Каждый год</string>
    <string name="custom">Когда нибудь</string>

</resources>